{fix & imp} fixed nav bar problems and implemented dark mode

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -25,3 +25,6 @@
 .item {
   flex: 1 1 1;
 }
+.toolbar {
+  text-align: left;
+}
